Kommentare für Verständnis & javadoc in EventController.java, FilterDto.java, Event.java, EventRepositoryImpl, SmokeT, EventRepositoryCustom, EventServiceTest.java